symbolic_apps_iconsdir = join_paths(apps_iconsdir, 'symbolic')

regular_files = [
    # DO NOT REMOVE: Begining of regular segment
    'CMakeSetup-symbolic.svg',
    'QtProject-designer-symbolic.svg',
    'TeamViewer-symbolic.svg',
    'Zoom-symbolic.svg',
    'abiword-symbolic.svg',
    'alacritty-symbolic.svg',
    'androidstudio-symbolic.svg',
    'anydesk-symbolic.svg',
    'assistant-symbolic.svg',
    'atomix-symbolic.svg',
    'audacity-symbolic.svg',
    'bitwarden-symbolic.svg',
    'bitwig-studio-symbolic.svg',
    'bleachbit-symbolic.svg',
    'blender-symbolic.svg',
    'brave-desktop-symbolic.svg',
    'btop-symbolic.svg',
    'calibre-symbolic.svg',
    'carla-symbolic.svg',
    'cawbird-symbolic.svg',
    'clamtk-symbolic.svg',
    'clion-symbolic.svg',
    'code-oss-symbolic.svg',
    'codeblocks-symbolic.svg',
    'com.github.eneshecan.WhatsAppForLinux-symbolic.svg',
    'com.github.rafostar.Clapper-symbolic.svg',
    'com.obsproject.Studio-symbolic.svg',
    'com.tonikelope.MegaBasterd-symbolic.svg',
    'corectrl-symbolic.svg',
    'cups-symbolic.svg',
    'darktable-symbolic.svg',
    'datagrip-symbolic.svg',
    'dataspell-symbolic.svg',
    'dbeaver-symbolic.svg',
    'dev.bsnes.bsnes-symbolic.svg',
    'discord-symbolic.svg',
    'eclipse-symbolic.svg',
    'electron-symbolic.svg',
    'electrum-symbolic.svg',
    'enpass-symbolic.svg',
    'etcher-symbolic.svg',
    'facebook-messenger-symbolic.svg',
    'fgcom-symbolic.svg',
    'figma-symbolic.svg',
    'filezilla-symbolic.svg',
    'firefox-symbolic.svg',
    'firewall-config-symbolic.svg',
    'fish-symbolic.svg',
    'fleet-symbolic.svg',
    'flightgear-symbolic.svg',
    'foobar2000-symbolic.svg',
    'fr.handbrake.ghb-symbolic.svg',
    'freac-symbolic.svg',
    'freetube-symbolic.svg',
    'fuse-emulator-symbolic.svg',
    'gda-control-center-symbolic.svg',
    'geany-symbolic.svg',
    'genymotion-symbolic.svg',
    'gimp-symbolic.svg',
    'github-desktop-symbolic.svg',
    'gitkraken-symbolic.svg',
    'gnome-aisleriot-symbolic.svg',
    'godot-symbolic.svg',
    'goland-symbolic.svg',
    'google-chrome-symbolic.svg',
    'google-earth-symbolic.svg',
    'gparted-symbolic.svg',
    'gpsd-logo-symbolic.svg',
    'grapejuice-roblox-player-symbolic.svg',
    'grapejuice-roblox-studio-symbolic.svg',
    'grapejuice-symbolic.svg',
    'grub-customizer-symbolic.svg',
    'gsmartcontrol-symbolic.svg',
    'gufw-symbolic.svg',
    'hardinfo-symbolic.svg',
    'headlines-symbolic.svg',
    'heroic-symbolic.svg',
    'hp_logo-symbolic.svg',
    'htop-symbolic.svg',
    'insomnia-symbolic.svg',
    'intellij-symbolic.svg',
    'io.element.Element-symbolic.svg',
    'java-openjdk-symbolic.svg',
    'jdownloader-symbolic.svg',
    'jetbrains-toolbox-symbolic.svg',
    'josm-symbolic.svg',
    'jupyter-symbolic.svg',
    'kate-symbolic.svg',
    'kdenlive-symbolic.svg',
    'keepassxc-symbolic.svg',
    'kitty-symbolic.svg',
    'kolourpaint-symbolic.svg',
    'krita-symbolic.svg',
    'kruler-symbolic.svg',
    'kvantum-symbolic.svg',
    'libreoffice-base-symbolic.svg',
    'libreoffice-basic-symbolic.svg',
    'libreoffice-calc-symbolic.svg',
    'libreoffice-chart-symbolic.svg',
    'libreoffice-draw-symbolic.svg',
    'libreoffice-impress-symbolic.svg',
    'libreoffice-math-symbolic.svg',
    'libreoffice-startcenter-symbolic.svg',
    'libreoffice-writer-symbolic.svg',
    'liferea-symbolic.svg',
    'linguist-symbolic.svg',
    'mailspring-symbolic.svg',
    'mattermost-symbolic.svg',
    'mediainfo-symbolic.svg',
    'menulibre-symbolic.svg',
    'micro-symbolic.svg',
    'microsoft-edge-symbolic.svg',
    'minecraft-symbolic.svg',
    'mockoon-symbolic.svg',
    'net.kuribo64.melonDS-symbolic.svg',
    'net.poedit.Poedit-symbolic.svg',
    'nextcloud-symbolic.svg',
    'nufraw-symbolic.svg',
    'nvidia-symbolic.svg',
    'nvim-symbolic.svg',
    'obsidian-symbolic.svg',
    'one.alynx.showmethekey-symbolic.svg',
    'onetagger-symbolic.svg',
    'openra-cnc-symbolic.svg',
    'openra-d2k-symbolic.svg',
    'openra-ra-symbolic.svg',
    'opera-symbolic.svg',
    'org.DolphinEmu.dolphin-emu-symbolic.svg',
    'org.fdroid.Repomaker-symbolic.svg',
    'org.inkscape.Inkscape-symbolic.svg',
    'org.onlyoffice.desktopeditors-symbolic.svg',
    'osmscout-server-symbolic.svg',
    'pacseek-symbolic.svg',
    'phpstorm-symbolic.svg',
    'pidgin-symbolic.svg',
    'popcorntime-symbolic.svg',
    'postman-symbolic.svg',
    'preferences-desktop-theme-symbolic.svg',
    'preferences-system-network-symbolic.svg',
    'prismlauncher-symbolic.svg',
    'projectM-symbolic.svg',
    'protonmail-bridge-symbolic.svg',
    'protonvpn-gui-symbolic.svg',
    'pure-maps-symbolic.svg',
    'pycharm-symbolic.svg',
    'qdbusviewer-symbolic.svg',
    'qt5ct-symbolic.svg',
    'qutebrowser-symbolic.svg',
    'qv4l2-symbolic.svg',
    'rawtherapee-symbolic.svg',
    'resolve-symbolic.svg',
    'rider-symbolic.svg',
    'rstudio-symbolic.svg',
    'rubymine-symbolic.svg',
    'saber-symbolic.svg',
    'scrcpy-symbolic.svg',
    'scribus-symbolic.svg',
    'session-desktop-symbolic.svg',
    'shotwell-symbolic.svg',
    'signal-desktop-symbolic.svg',
    'skypeforlinux-symbolic.svg',
    'slack-symbolic.svg',
    'soundconverter-symbolic.svg',
    'spek-symbolic.svg',
    'spotify-symbolic.svg',
    'spyder-symbolic.svg',
    'standard-notes-symbolic.svg',
    'steam-icon-symbolic.svg',
    'stellarium-symbolic.svg',
    'stoken-gui-symbolic.svg',
    'strawberry-symbolic.svg',
    'sublime-merge-symbolic.svg',
    'sublime-text-symbolic.svg',
    'syncthing-gtk-symbolic.svg',
    'system-software-install-symbolic.svg',
    'teams-symbolic.svg',
    'telegram-symbolic.svg',
    'texstudio-symbolic.svg',
    'thunderbird-symbolic.svg',
    'todoist-symbolic.svg',
    'tor-browser-symbolic.svg',
    'unityhub-symbolic.svg',
    'viber-symbolic.svg',
    'vim-symbolic.svg',
    'virt-manager-symbolic.svg',
    'virtualbox-symbolic.svg',
    'visual-studio-code-symbolic.svg',
    'vivaldi-symbolic.svg',
    'vlc-symbolic.svg',
    'vmware-workstation-symbolic.svg',
    'vscodium-symbolic.svg',
    'warpinator-symbolic.svg',
    'webstorm-symbolic.svg',
    'windscribe-symbolic.svg',
    'xdvi-symbolic.svg',
    'xsane-symbolic.svg',
    'yuzu-symbolic.svg',
    'zotero-symbolic.svg',
    'zrythm-symbolic.svg',
    # DO NOT REMOVE: End of regular segment
]

link_files = {
    # DO NOT REMOVE: Begining of link segment
    'libreoffice-startcenter-symbolic.svg': [
        'libreoffice-main-symbolic.svg',
        'libreoffice4.2-startcenter-symbolic.svg',
        'libreoffice4.2-symbolic.svg',
        'libreoffice5.0-main-symbolic.svg',
        'libreoffice5.0-startcenter-symbolic.svg',
        'libreoffice5.0-symbolic.svg',
        'libreoffice5.1-main-symbolic.svg',
        'libreoffice5.1-startcenter-symbolic.svg',
        'libreoffice5.1-symbolic.svg',
        'libreoffice5.2-main-symbolic.svg',
        'libreoffice5.2-startcenter-symbolic.svg',
        'libreoffice5.2-symbolic.svg',
        'libreoffice5.3-main-symbolic.svg',
        'libreoffice5.3-startcenter-symbolic.svg',
        'libreoffice5.3-symbolic.svg',
        'libreoffice5.4-main-symbolic.svg',
        'libreoffice5.4-startcenter-symbolic.svg',
        'libreoffice5.4-symbolic.svg',
        'libreoffice6.0-main-symbolic.svg',
        'libreoffice6.0-startcenter-symbolic.svg',
        'libreoffice6.0-symbolic.svg',
        'libreoffice6.2-main-symbolic.svg',
        'libreoffice6.2-startcenter-symbolic.svg',
        'libreoffice6.3-main-symbolic.svg',
        'libreoffice6.3-startcenter-symbolic.svg',
        'libreoffice6.4-main-symbolic.svg',
        'libreoffice6.4-startcenter-symbolic.svg',
        'libreoffice7.0-main-symbolic.svg',
        'libreoffice7.0-startcenter-symbolic.svg',
        'libreoffice7.1-main-symbolic.svg',
        'libreoffice7.1-startcenter-symbolic.svg',
        'libreoffice7.2-main-symbolic.svg',
        'libreoffice7.2-startcenter-symbolic.svg',
        'libreoffice7.3-main-symbolic.svg',
        'libreoffice7.3-startcenter-symbolic.svg',
        'libreoffice7.4-main-symbolic.svg',
        'libreoffice7.4-startcenter-symbolic.svg',
        'libreoffice7.5-main-symbolic.svg',
        'libreoffice7.5-startcenter-symbolic.svg',
        'libreoffice7.6-startcenter-symbolic.svg',
        'org.libreoffice.LibreOffice.main-symbolic.svg',
        'org.libreoffice.LibreOffice.startcenter-symbolic.svg',
    ],
    'discord-symbolic.svg': [
        'com.discordapp.Discord-symbolic.svg',
        'discord-canary-symbolic.svg',
    ],
    'vivaldi-symbolic.svg': [
        'vivaldi-stable-symbolic.svg',
    ],
    'virtualbox-symbolic.svg': [
        'virtualbox-ose-symbolic.svg',
    ],
    'Zoom-symbolic.svg': [
        'us.zoom.Zoom-symbolic.svg',
        'zoom-desktop-symbolic.svg',
        'zoom-icon-symbolic.svg',
    ],
    'cawbird-symbolic.svg': [
        'uk.co.ibboard.cawbird-symbolic.svg',
    ],
    'TeamViewer-symbolic.svg': [
        'teamviewer-symbolic.svg',
    ],
    'spyder-symbolic.svg': [
        'spyder3-symbolic.svg',
    ],
    'insomnia-symbolic.svg': [
        'rest.insomnia.Insomnia-symbolic.svg',
    ],
    'qv4l2-symbolic.svg': [
        'qvidcap-symbolic.svg',
    ],
    'qt5ct-symbolic.svg': [
        'qt6ct-symbolic.svg',
        'qtconfig-qt4-symbolic.svg',
        'qtconfig-qt5-symbolic.svg',
        'qtconfig-qt6-symbolic.svg',
        'qtconfig-symbolic.svg',
    ],
    'popcorntime-symbolic.svg': [
        'popcorn-time-symbolic.svg',
        'popcorntime-ru-symbolic.svg',
    ],
    'net.poedit.Poedit-symbolic.svg': [
        'poedit-symbolic.svg',
    ],
    'system-software-install-symbolic.svg': [
        'pamac-manager-symbolic.svg',
        'pamac-symbolic.svg',
        'pamac-updater-symbolic.svg',
        'system-software-installer-symbolic.svg',
        'system-software-update-symbolic.svg',
    ],
    'zotero-symbolic.svg': [
        'org.zotero.Zotero-symbolic.svg',
    ],
    'warpinator-symbolic.svg': [
        'org.x.Warpinator-symbolic.svg',
    ],
    'vlc-symbolic.svg': [
        'org.videolan.VLC-symbolic.svg',
    ],
    'texstudio-symbolic.svg': [
        'org.texstudio.TeXstudio-symbolic.svg',
    ],
    'telegram-symbolic.svg': [
        'org.telegram.desktop-symbolic.svg',
        'telegram-desktop-bin-symbolic.svg',
        'telegram-desktop-symbolic.svg',
    ],
    'strawberry-symbolic.svg': [
        'org.strawberrymusicplayer.strawberry-symbolic.svg',
    ],
    'stellarium-symbolic.svg': [
        'org.stellarium.Stellarium-symbolic.svg',
    ],
    'soundconverter-symbolic.svg': [
        'org.soundconverter.SoundConverter-symbolic.svg',
    ],
    'signal-desktop-symbolic.svg': [
        'org.signal.Signal-symbolic.svg',
    ],
    'qutebrowser-symbolic.svg': [
        'org.qutebrowser.qutebrowser-symbolic.svg',
    ],
    'prismlauncher-symbolic.svg': [
        'org.prismlauncher.PrismLauncher-symbolic.svg',
    ],
    'josm-symbolic.svg': [
        'org.openstreetmap.josm-symbolic.svg',
    ],
    'thunderbird-symbolic.svg': [
        'org.mozilla.Thunderbird-symbolic.svg',
        'thunderbird-3.0-symbolic.svg',
        'thunderbird-bin-symbolic.svg',
        'thunderbird-icon-symbolic.svg',
        'thunderbird-mozilla-buld-symbolic.svg',
    ],
    'pacseek-symbolic.svg': [
        'org.moson.Pacseek-symbolic.svg',
        'org.moson.pacseek-symbolic.svg',
    ],
    'keepassxc-symbolic.svg': [
        'org.keepassxc.KeePassXC-symbolic.svg',
    ],
    'kolourpaint-symbolic.svg': [
        'org.kde.kolourpaint-symbolic.svg',
    ],
    'kdenlive-symbolic.svg': [
        'org.kde.kdenlive-symbolic.svg',
    ],
    'jdownloader-symbolic.svg': [
        'org.jdownloader.JDownloader-symbolic.svg',
    ],
    'shotwell-symbolic.svg': [
        'org.gnome.Shotwell-symbolic.svg',
    ],
    'gnome-aisleriot-symbolic.svg': [
        'org.gnome.Aisleriot-symbolic.svg',
    ],
    'gimp-symbolic.svg': [
        'org.gimp.GIMP-symbolic.svg',
    ],
    'geany-symbolic.svg': [
        'org.geany.Geany-symbolic.svg',
    ],
    'flightgear-symbolic.svg': [
        'org.flightgear.FlightGear-symbolic.svg',
    ],
    'fgcom-symbolic.svg': [
        'org.flightgear.FGCom-symbolic.svg',
    ],
    'filezilla-symbolic.svg': [
        'org.filezillaproject.Filezilla-symbolic.svg',
    ],
    'electrum-symbolic.svg': [
        'org.electrum.electrum-symbolic.svg',
    ],
    'darktable-symbolic.svg': [
        'org.darktable.Darktable-symbolic.svg',
    ],
    'codeblocks-symbolic.svg': [
        'org.codeblocks.codeblocks-symbolic.svg',
    ],
    'menulibre-symbolic.svg': [
        'org.bluesabre.MenuLibre-symbolic.svg',
    ],
    'audacity-symbolic.svg': [
        'org.audacityteam.Audacity-symbolic.svg',
    ],
    'org.onlyoffice.desktopeditors-symbolic.svg': [
        'onlyoffice-desktopeditors-symbolic.svg',
    ],
    'postman-symbolic.svg': [
        'om.getpostman.Postman-symbolic.svg',
    ],
    'com.obsproject.Studio-symbolic.svg': [
        'obs-symbolic.svg',
    ],
    'nvidia-symbolic.svg': [
        'nvidia-310-settings-symbolic.svg',
        'nvidia-current-settings-symbolic.svg',
        'nvidia-current-updates-settings-symbolic.svg',
        'nvidia-ddm-mx-symbolic.svg',
        'nvidia-drivers-settings-symbolic.svg',
        'nvidia-settings-symbolic.svg',
        'nvidia-x-server-settings-symbolic.svg',
    ],
    'projectM-symbolic.svg': [
        'net.sourceforge.projectM-symbolic.svg',
    ],
    'liferea-symbolic.svg': [
        'net.sourceforge.liferea-symbolic.svg',
    ],
    'scribus-symbolic.svg': [
        'net.scribus.Scribus-symbolic.svg',
        'scribus-ng-symbolic.svg',
        'scribus-trunk-symbolic.svg',
    ],
    'openra-d2k-symbolic.svg': [
        'net.openra.OpenRA.openra-d2k-symbolic.svg',
    ],
    'openra-cnc-symbolic.svg': [
        'net.openra.OpenRA.openra-cnc-symbolic.svg',
    ],
    'openra-ra-symbolic.svg': [
        'net.openra.OpenRA-symbolic.svg',
    ],
    'mediainfo-symbolic.svg': [
        'net.mediaarea.MediaInfo-symbolic.svg',
    ],
    'grapejuice-roblox-studio-symbolic.svg': [
        'net.brinkervii.grapejuice.robloxstudio-symbolic.svg',
    ],
    'grapejuice-roblox-player-symbolic.svg': [
        'net.brinkervii.grapejuice.robloxplayer-symbolic.svg',
    ],
    'grapejuice-symbolic.svg': [
        'net.brinkervii.grapejuice-symbolic.svg',
    ],
    'com.tonikelope.MegaBasterd-symbolic.svg': [
        'megabasterd-symbolic.svg',
    ],
    'syncthing-gtk-symbolic.svg': [
        'me.kozec.syncthingtk-symbolic.svg',
        'syncthing-symbolic.svg',
        'syncthingtray-symbolic.svg',
    ],
    'libreoffice-main-symbolic.svg': [
        'libreoffice7.6-main-symbolic.svg',
    ],
    'libreoffice-chart-symbolic.svg': [
        'libreoffice7.5-chart-symbolic.svg',
        'libreoffice7.6-chart-symbolic.svg',
        'org.libreoffice.LibreOffice.chart-symbolic.svg',
    ],
    'libreoffice-basic-symbolic.svg': [
        'libreoffice7.5-basic-symbolic.svg',
        'libreoffice7.6-basic-symbolic.svg',
        'org.libreoffice.LibreOffice.basic-symbolic.svg',
    ],
    'libreoffice-impress-symbolic.svg': [
        'libreoffice5.0-impress-symbolic.svg',
        'libreoffice5.1-impress-symbolic.svg',
        'libreoffice5.2-impress-symbolic.svg',
        'libreoffice5.3-impress-symbolic.svg',
        'libreoffice5.4-impress-symbolic.svg',
        'libreoffice6.0-impress-symbolic.svg',
        'libreoffice6.2-impress-symbolic.svg',
        'libreoffice6.3-impress-symbolic.svg',
        'libreoffice6.4-impress-symbolic.svg',
        'libreoffice7.0-impress-symbolic.svg',
        'libreoffice7.1-impress-symbolic.svg',
        'libreoffice7.2-impress-symbolic.svg',
        'libreoffice7.3-impress-symbolic.svg',
        'libreoffice7.4-impress-symbolic.svg',
        'libreoffice7.5-impress-symbolic.svg',
        'libreoffice7.6-impress-symbolic.svg',
        'org.libreoffice.LibreOffice.impress-symbolic.svg',
    ],
    'libreoffice-writer-symbolic.svg': [
        'libreoffice4.2-writer-symbolic.svg',
        'libreoffice5.0-writer-symbolic.svg',
        'libreoffice5.1-writer-symbolic.svg',
        'libreoffice5.2-writer-symbolic.svg',
        'libreoffice5.3-writer-symbolic.svg',
        'libreoffice5.4-writer-symbolic.svg',
        'libreoffice6.0-writer-symbolic.svg',
        'libreoffice6.2-writer-symbolic.svg',
        'libreoffice6.3-writer-symbolic.svg',
        'libreoffice6.4-writer-symbolic.svg',
        'libreoffice7.0-writer-symbolic.svg',
        'libreoffice7.1-writer-symbolic.svg',
        'libreoffice7.2-writer-symbolic.svg',
        'libreoffice7.3-writer-symbolic.svg',
        'libreoffice7.4-writer-symbolic.svg',
        'libreoffice7.5-writer-symbolic.svg',
        'libreoffice7.6-writer-symbolic.svg',
        'org.libreoffice.LibreOffice.writer-symbolic.svg',
    ],
    'libreoffice-math-symbolic.svg': [
        'libreoffice4.2-math-symbolic.svg',
        'libreoffice5.0-math-symbolic.svg',
        'libreoffice5.1-math-symbolic.svg',
        'libreoffice5.2-math-symbolic.svg',
        'libreoffice5.3-math-symbolic.svg',
        'libreoffice5.4-math-symbolic.svg',
        'libreoffice6.0-math-symbolic.svg',
        'libreoffice6.2-math-symbolic.svg',
        'libreoffice6.3-math-symbolic.svg',
        'libreoffice6.4-math-symbolic.svg',
        'libreoffice7.0-math-symbolic.svg',
        'libreoffice7.1-math-symbolic.svg',
        'libreoffice7.2-math-symbolic.svg',
        'libreoffice7.3-math-symbolic.svg',
        'libreoffice7.4-math-symbolic.svg',
        'libreoffice7.5-math-symbolic.svg',
        'libreoffice7.6-math-symbolic.svg',
        'org.libreoffice.LibreOffice.math-symbolic.svg',
    ],
    'libreoffice-draw-symbolic.svg': [
        'libreoffice4.2-draw-symbolic.svg',
        'libreoffice5.0-draw-symbolic.svg',
        'libreoffice5.1-draw-symbolic.svg',
        'libreoffice5.2-draw-symbolic.svg',
        'libreoffice5.3-draw-symbolic.svg',
        'libreoffice5.4-draw-symbolic.svg',
        'libreoffice6.0-draw-symbolic.svg',
        'libreoffice6.2-draw-symbolic.svg',
        'libreoffice6.3-draw-symbolic.svg',
        'libreoffice6.4-draw-symbolic.svg',
        'libreoffice7.0-draw-symbolic.svg',
        'libreoffice7.1-draw-symbolic.svg',
        'libreoffice7.2-draw-symbolic.svg',
        'libreoffice7.3-draw-symbolic.svg',
        'libreoffice7.4-draw-symbolic.svg',
        'libreoffice7.5-draw-symbolic.svg',
        'libreoffice7.6-draw-symbolic.svg',
        'org.libreoffice.LibreOffice.draw-symbolic.svg',
    ],
    'libreoffice-calc-symbolic.svg': [
        'libreoffice4.2-calc-symbolic.svg',
        'libreoffice5.0-calc-symbolic.svg',
        'libreoffice5.1-calc-symbolic.svg',
        'libreoffice5.2-calc-symbolic.svg',
        'libreoffice5.3-calc-symbolic.svg',
        'libreoffice5.4-calc-symbolic.svg',
        'libreoffice6.0-calc-symbolic.svg',
        'libreoffice6.2-calc-symbolic.svg',
        'libreoffice6.3-calc-symbolic.svg',
        'libreoffice6.4-calc-symbolic.svg',
        'libreoffice7.0-calc-symbolic.svg',
        'libreoffice7.1-calc-symbolic.svg',
        'libreoffice7.2-calc-symbolic.svg',
        'libreoffice7.3-calc-symbolic.svg',
        'libreoffice7.4-calc-symbolic.svg',
        'libreoffice7.5-calc-symbolic.svg',
        'libreoffice7.6-calc-symbolic.svg',
        'org.libreoffice.LibreOffice.calc-symbolic.svg',
    ],
    'libreoffice-base-symbolic.svg': [
        'libreoffice4.2-base-symbolic.svg',
        'libreoffice5.0-base-symbolic.svg',
        'libreoffice5.1-base-symbolic.svg',
        'libreoffice5.2-base-symbolic.svg',
        'libreoffice5.3-base-symbolic.svg',
        'libreoffice5.4-base-symbolic.svg',
        'libreoffice6.0-base-symbolic.svg',
        'libreoffice6.2-base-symbolic.svg',
        'libreoffice6.3-base-symbolic.svg',
        'libreoffice6.4-base-symbolic.svg',
        'libreoffice7.0-base-symbolic.svg',
        'libreoffice7.1-base-symbolic.svg',
        'libreoffice7.2-base-symbolic.svg',
        'libreoffice7.3-base-symbolic.svg',
        'libreoffice7.4-base-symbolic.svg',
        'libreoffice7.5-base-symbolic.svg',
        'libreoffice7.6-base-symbolic.svg',
        'org.libreoffice.LibreOffice.base-symbolic.svg',
    ],
    'kate-symbolic.svg': [
        'kate2-symbolic.svg',
        'org.kde.kate-symbolic.svg',
        'org.kde.plasma.katesessions-symbolic.svg',
    ],
    'jupyter-symbolic.svg': [
        'jupyterlab-desktop-symbolic.svg',
        'org.jupyter.JupyterLab-symbolic.svg',
    ],
    'QtProject-designer-symbolic.svg': [
        'io.qt.Designer-symbolic.svg',
    ],
    'nvim-symbolic.svg': [
        'io.neovim.nvim-symbolic.svg',
        'nvim-gtk-symbolic.svg',
        'nvim-qt-symbolic.svg',
        'org.daa.NeovimGtk-symbolic.svg',
        'pynvim-symbolic.svg',
    ],
    'headlines-symbolic.svg': [
        'io.gitlab.caveman250.headlines-symbolic.svg',
    ],
    'osmscout-server-symbolic.svg': [
        'io.github.rinigus.OSMScoutServer-symbolic.svg',
    ],
    'org.inkscape.Inkscape-symbolic.svg': [
        'inkscape-logo-symbolic.svg',
        'inkscape-symbolic.svg',
    ],
    'pidgin-symbolic.svg': [
        'im.pidgin.Pidgin-symbolic.svg',
    ],
    'hardinfo-symbolic.svg': [
        'hwloc-symbolic.svg',
    ],
    'hp_logo-symbolic.svg': [
        'hp-logo-symbolic.svg',
        'hp-toolbox-symbolic.svg',
        'hplip-symbolic.svg',
        'hplj1020_icon-symbolic.svg',
    ],
    'pure-maps-symbolic.svg': [
        'harbour-pure-maps-symbolic.svg',
        'io.github.rinigus.PureMaps-symbolic.svg',
    ],
    'vim-symbolic.svg': [
        'gvim-symbolic.svg',
        'org.vim.Vim-symbolic.svg',
        'vim-qt-symbolic.svg',
    ],
    'google-earth-symbolic.svg': [
        'google-earth-pro-symbolic.svg',
        'googleearth-symbolic.svg',
    ],
    'godot-symbolic.svg': [
        'godot-mono-symbolic.svg',
        'lutris_godot-engine-symbolic.svg',
        'org.godotengine.Godot-symbolic.svg',
    ],
    'kruler-symbolic.svg': [
        'gnome-screenruler-symbolic.svg',
        'org.kde.kruler-symbolic.svg',
        'screenruler-icon-symbolic.svg',
        'screenruler-symbolic.svg',
    ],
    'genymotion-symbolic.svg': [
        'genymotion-bin-symbolic.svg',
        'genymotion-player-symbolic.svg',
    ],
    'gda-control-center-symbolic.svg': [
        'gda-browser-5.0-symbolic.svg',
    ],
    'fuse-emulator-symbolic.svg': [
        'fuse-symbolic.svg',
        'net.sf.fuse_emulator-symbolic.svg',
    ],
    'freetube-symbolic.svg': [
        'freetube-bin-symbolic.svg',
        'io.freetubeapp.FreeTube-symbolic.svg',
    ],
    'firewall-config-symbolic.svg': [
        'firewall-applet-symbolic.svg',
    ],
    'firefox-symbolic.svg': [
        'firefox-beta-bin-symbolic.svg',
        'firefox-beta-symbolic.svg',
        'firefox-bin-symbolic.svg',
        'firefox-default-symbolic.svg',
        'firefox-developer-edition-symbolic.svg',
        'firefox-developer-icon-symbolic.svg',
        'firefox-esr-symbolic.svg',
        'firefox-gtk3-symbolic.svg',
        'firefox-icon-symbolic.svg',
        'firefox-moilla-build-symbolic.svg',
        'firefox-original-symbolic.svg',
        'mozilla-firefox-symbolic.svg',
        'org.mozilla.Firefox-symbolic.svg',
        'org.mozilla.FirefoxDevEdition-symbolic.svg',
        'org.mozilla.firefox-symbolic.svg',
    ],
    'figma-symbolic.svg': [
        'figma-linux-symbolic.svg',
        'io.github.Figma_Linux.figma_linux-symbolic.svg',
    ],
    'electron-symbolic.svg': [
        'electron12-symbolic.svg',
        'electron16-symbolic.svg',
        'electron17-symbolic.svg',
        'electron18-symbolic.svg',
        'electron19-symbolic.svg',
        'electron2-symbolic.svg',
        'electron20-symbolic.svg',
        'electron4-symbolic.svg',
        'electron6-symbolic.svg',
        'electron9-symbolic.svg',
        'io.atom.electron.BaseApp-symbolic.svg',
    ],
    'eclipse-symbolic.svg': [
        'eclipse-cdt-symbolic.svg',
        'org.eclipse.Committers-symbolic.svg',
        'org.eclipse.Java-symbolic.svg',
        'org.eclipse.Javascript-symbolic.svg',
    ],
    'dbeaver-symbolic.svg': [
        'dbeaver-ee-symbolic.svg',
        'io.dbeaver.DBeaverCommunity-symbolic.svg',
    ],
    'vscodium-symbolic.svg': [
        'com.vscodium.codium-symbolic.svg',
    ],
    'code-oss-symbolic.svg': [
        'com.visualstudio.code-oss-symbolic.svg',
        'com.visualstudio.code.oss-symbolic.svg',
    ],
    'viber-symbolic.svg': [
        'com.viber.Viber-symbolic.svg',
    ],
    'steam-icon-symbolic.svg': [
        'com.valvesoftware.Steam-symbolic.svg',
        'steam-launcher-symbolic.svg',
        'steam-symbolic.svg',
        'steampowered-symbolic.svg',
    ],
    'todoist-symbolic.svg': [
        'com.todoist.Todoist-symbolic.svg',
        'goa-account-todoist-symbolic.svg',
    ],
    'sublime-text-symbolic.svg': [
        'com.sublimetext.three-symbolic.svg',
        'sublime-symbolic.svg',
        'sublime-text-2-symbolic.svg',
        'sublime-text-3-symbolic.svg',
        'sublime-text2-symbolic.svg',
        'sublime_text-symbolic.svg',
        'sublimetext-symbolic.svg',
    ],
    'slack-symbolic.svg': [
        'com.slack.Slack-symbolic.svg',
    ],
    'skypeforlinux-symbolic.svg': [
        'com.skype.Client-symbolic.svg',
        'ms-skype-symbolic.svg',
        'skype-symbolic.svg',
    ],
    'rawtherapee-symbolic.svg': [
        'com.rawtherapee.RawTherapee-symbolic.svg',
    ],
    'protonvpn-gui-symbolic.svg': [
        'com.protonvpn.www-symbolic.svg',
        'protonvpn-logo-symbolic.svg',
    ],
    'minecraft-symbolic.svg': [
        'com.mojang.Minecraft-symbolic.svg',
        'lutris_minecraft-symbolic.svg',
        'minecraft-launcher-symbolic.svg',
        'minecraft-pi-symbolic.svg',
    ],
    'microsoft-edge-symbolic.svg': [
        'com.microsoft.Edge-symbolic.svg',
    ],
    'mattermost-symbolic.svg': [
        'com.mattermost.Desktop-symbolic.svg',
        'mattermost-desktop-bin-symbolic.svg',
        'mattermost-desktop-symbolic.svg',
    ],
    'webstorm-symbolic.svg': [
        'com.jetbrains.WebStorm-symbolic.svg',
    ],
    'rubymine-symbolic.svg': [
        'com.jetbrains.RubyMine-symbolic.svg',
    ],
    'rider-symbolic.svg': [
        'com.jetbrains.Rider-symbolic.svg',
    ],
    'pycharm-symbolic.svg': [
        'com.jetbrains.PyCharm-Community-symbolic.svg',
        'com.jetbrains.PyCharm-Professional-symbolic.svg',
    ],
    'phpstorm-symbolic.svg': [
        'com.jetbrains.PhpStorm-symbolic.svg',
    ],
    'intellij-symbolic.svg': [
        'com.jetbrains.IntelliJ-IDEA-Community-symbolic.svg',
        'com.jetbrains.IntelliJ-IDEA-Ultimate-symbolic.svg',
    ],
    'goland-symbolic.svg': [
        'com.jetbrains.GoLand-symbolic.svg',
    ],
    'fleet-symbolic.svg': [
        'com.jetbrains.Fleet-symbolic.svg',
    ],
    'dataspell-symbolic.svg': [
        'com.jetbrains.DataSpell-symbolic.svg',
        'com.jetbrains.dataspell-symbolic.svg',
        'jetbrains-dataspell-symbolic.svg',
    ],
    'datagrip-symbolic.svg': [
        'com.jetbrains.DataGrip-symbolic.svg',
    ],
    'clion-symbolic.svg': [
        'com.jetbrains.CLion-symbolic.svg',
    ],
    'tor-browser-symbolic.svg': [
        'com.github.micahflee.torbrowser-launcher-symbolic.svg',
        'tor-browser-en-symbolic.svg',
        'tor-browser-ru-symbolic.svg',
        'tor-symbolic.svg',
        'torbrowser-symbolic.svg',
    ],
    'com.github.eneshecan.WhatsAppForLinux-symbolic.svg': [
        'com.gigitux.gtkwhats-symbolic.svg',
        'io.bit3.WhatsAppQT-symbolic.svg',
        'io.github.mimbrero.WhatsAppDesktop-symbolic.svg',
        'whatsapp-desktop-symbolic.svg',
        'whatsapp-for-linux-symbolic.svg',
        'whatsapp-nativefier-symbolic.svg',
        'whatsapp-symbolic.svg',
        'whatsdesk-symbolic.svg',
    ],
    'mailspring-symbolic.svg': [
        'com.getmailspring.Mailspring-symbolic.svg',
    ],
    'discord-canary-symbolic.svg': [
        'com.discordapp.DiscordCanary-symbolic.svg',
    ],
    'bitwig-studio-symbolic.svg': [
        'com.bitwig.BitwigStudio-symbolic.svg',
    ],
    'anydesk-symbolic.svg': [
        'com.anydesk.Anydesk-symbolic.svg',
    ],
    'saber-symbolic.svg': [
        'com.adilhanney.saber-symbolic.svg',
    ],
    'abiword-symbolic.svg': [
        'com.abisource.AbiWord-symbolic.svg',
    ],
    'visual-studio-code-symbolic.svg': [
        'code-symbolic.svg',
        'com.visualstudio.code-symbolic.svg',
    ],
    'clamtk-symbolic.svg': [
        'clamav-symbolic.svg',
        'com.gitlab.davem.ClamTk-symbolic.svg',
    ],
    'google-chrome-symbolic.svg': [
        'chrome-ighkikkfkalojiibipjigpccggljgdff-Default-symbolic.svg',
        'chromium-browser-privacy-symbolic.svg',
        'chromium-browser-symbolic.svg',
        'chromium-freeworld-symbolic.svg',
        'chromium-symbolic.svg',
        'com.google.Chrome-symbolic.svg',
        'google-chrome2-symbolic.svg',
        'googlechrome-symbolic.svg',
        'org.chromium.Chromium-symbolic.svg',
    ],
    'carla-symbolic.svg': [
        'carla-control-symbolic.svg',
        'studio.kx.carla-symbolic.svg',
    ],
    'facebook-messenger-symbolic.svg': [
        'caprine-symbolic.svg',
        'com.sindresorhus.Caprine-symbolic.svg',
    ],
    'krita-symbolic.svg': [
        'calligrakrita-symbolic.svg',
        'calligrakrita2-symbolic.svg',
        'lutris_krita-gemini-symbolic.svg',
        'org.kde.krita-symbolic.svg',
    ],
    'calibre-symbolic.svg': [
        'calibre-gui-symbolic.svg',
        'com.calibre_ebook.calibre-symbolic.svg',
        'com.calibre_ebook.calibre.ebook-edit-symbolic.svg',
        'com.calibre_ebook.calibre.ebook-viewer-symbolic.svg',
        'com.calibre_ebook.calibre.ebook_edit-symbolic.svg',
        'com.calibre_ebook.calibre.ebook_viewer-symbolic.svg',
        'com.calibre_ebook.calibre.lrfviewer-symbolic.svg',
    ],
    'dev.bsnes.bsnes-symbolic.svg': [
        'bsnes-symbolic.svg',
    ],
    'brave-desktop-symbolic.svg': [
        'brave-browser-symbolic.svg',
    ],
    'xsane-symbolic.svg': [
        'blueman-scanner-symbolic.svg',
        'com.hamrick.VueScan-symbolic.svg',
        'deepin-scanner-symbolic.svg',
        'gscan2pdf-symbolic.svg',
        'vuescan-symbolic.svg',
        'yast-scanner-symbolic.svg',
    ],
    'java-openjdk-symbolic.svg': [
        'applications-java-symbolic.svg',
        'java-1.6.0-symbolic.svg',
        'java-1.7.0-symbolic.svg',
        'java-1.8.0-openjdk-symbolic.svg',
        'java-1.8.0-symbolic.svg',
        'java-10-openjdk-symbolic.svg',
        'java-11-openjdk-symbolic.svg',
        'java-12-openjdk-symbolic.svg',
        'java-13-openjdk-symbolic.svg',
        'java-14-openjdk-symbolic.svg',
        'java-jdk-symbolic.svg',
        'java10-openjdk-symbolic.svg',
        'java11-openjdk-symbolic.svg',
        'java12-openjdk-symbolic.svg',
        'java13-openjdk-symbolic.svg',
        'java14-openjdk-symbolic.svg',
        'java15-openjdk-symbolic.svg',
        'java16-openjdk-symbolic.svg',
        'java17-openjdk-symbolic.svg',
        'java18-openjdk-symbolic.svg',
        'java19-openjdk-symbolic.svg',
        'java20-openjdk-symbolic.svg',
        'java21-openjdk-symbolic.svg',
        'java8-openjdk-symbolic.svg',
        'java9-openjdk-symbolic.svg',
        'javaws-symbolic.svg',
        'oracle_java6-symbolic.svg',
        'oracle_java7-symbolic.svg',
        'oracle_java8-symbolic.svg',
        'oracle_java9-symbolic.svg',
        'oracle_javaws-symbolic.svg',
        'sun-java-jdk10-symbolic.svg',
        'sun-java-jdk5-symbolic.svg',
        'sun-java-jdk6-symbolic.svg',
        'sun-java-jdk7-symbolic.svg',
        'sun-java-jdk8-symbolic.svg',
        'sun-java-jdk9-symbolic.svg',
        'sun-java-jre10-symbolic.svg',
        'sun-java-jre8-symbolic.svg',
        'sun-java32-jdk5-symbolic.svg',
        'sun-java32-jdk6-symbolic.svg',
        'sun-java32-jdk7-symbolic.svg',
        'sun-java32-jdk8-symbolic.svg',
        'sun-javaws-jdk10-symbolic.svg',
        'sun-javaws-jdk6-symbolic.svg',
        'sun-javaws-jdk7-symbolic.svg',
        'sun-javaws-jdk8-symbolic.svg',
        'sun-javaws-jdk9-symbolic.svg',
        'sun-javaws-jre10-symbolic.svg',
        'sun-javaws-jre8-symbolic.svg',
        'sun-javaws32-jdk6-symbolic.svg',
        'sun-javaws32-jdk7-symbolic.svg',
        'sun-javaws32-jdk8-symbolic.svg',
    ],
    'yuzu-symbolic.svg': [
        'appimagekit-yuzu-symbolic.svg',
        'org.yuzu_emu.yuzu-symbolic.svg',
    ],
    'unityhub-symbolic.svg': [
        'appimagekit-unityeditor-symbolic.svg',
        'appimagekit-unityhub-symbolic.svg',
        'com.unityhub.UnityEditor-symbolic.svg',
        'com.unityhub.UnityHub-symbolic.svg',
        'unity-editor-icon-symbolic.svg',
        'unityeditor-symbolic.svg',
    ],
    'teams-symbolic.svg': [
        'appimagekit-teams-for-linux-symbolic.svg',
        'brave-cifhbcnohmdccbgoicgdjpfamggdegmo-Default-symbolic.svg',
        'chrome-cifhbcnohmdccbgoicgdjpfamggdegmo-Default-symbolic.svg',
        'com.github.IsmaelMartinez.teams_for_linux-symbolic.svg',
        'com.microsoft.Teams-symbolic.svg',
        'msedge-cifhbcnohmdccbgoicgdjpfamggdegmo-Default-symbolic.svg',
        'opera-cifhbcnohmdccbgoicgdjpfamggdegmo-Default-symbolic.svg',
        'teams-for-linux-symbolic.svg',
        'vivaldi-cifhbcnohmdccbgoicgdjpfamggdegmo-Default-symbolic.svg',
    ],
    'standard-notes-symbolic.svg': [
        'appimagekit-standard-notes-symbolic.svg',
        'org.standardnotes.standardnotes-symbolic.svg',
    ],
    'session-desktop-symbolic.svg': [
        'appimagekit-session-desktop-symbolic.svg',
    ],
    'freac-symbolic.svg': [
        'appimagekit-org.freac.freac-symbolic.svg',
        'org.freac.freac-symbolic.svg',
    ],
    'obsidian-symbolic.svg': [
        'appimagekit-obsidian-symbolic.svg',
        'md.obsidian.Obsidian-symbolic.svg',
    ],
    'kitty-symbolic.svg': [
        'appimagekit-kitty-symbolic.svg',
    ],
    'heroic-symbolic.svg': [
        'appimagekit-heroic-symbolic.svg',
        'com.heroicgameslauncher.hgl-symbolic.svg',
    ],
    'scrcpy-symbolic.svg': [
        'appimagekit-guiscrcpy-symbolic.svg',
        'guiscrcpy-symbolic.svg',
        'qtscrcpy-symbolic.svg',
    ],
    'github-desktop-symbolic.svg': [
        'appimagekit-github-desktop-symbolic.svg',
        'io.github.shiftey.Desktop-symbolic.svg',
    ],
    'bitwarden-symbolic.svg': [
        'appimagekit-bitwarden-symbolic.svg',
        'com.bitwarden.desktop-symbolic.svg',
    ],
    'etcher-symbolic.svg': [
        'appimagekit-balena-etcher-electron-symbolic.svg',
        'balena-etcher-electron-symbolic.svg',
        'etcher-electron-symbolic.svg',
    ],
    'androidstudio-symbolic.svg': [
        'android-studio-beta-symbolic.svg',
        'android-studio-canary-symbolic.svg',
        'android-studio-symbolic.svg',
        'androidstudio-preview-symbolic.svg',
        'com.google.AndroidStudio-symbolic.svg',
    ],
    'spotify-symbolic.svg': [
        'Spotify-symbolic.svg',
        'com.spotify.Client-symbolic.svg',
        'eu.tiliado.NuvolaAppSpotify-symbolic.svg',
        'nuvolaplayer3_spotify-symbolic.svg',
        'spotify-client-symbolic.svg',
        'spotify-linux-48x48-symbolic.svg',
        'spotify-linux-512x512-symbolic.svg',
        'spotify-qt-symbolic.svg',
    ],
    'qdbusviewer-symbolic.svg': [
        'QtProject-qdbusviewer-symbolic.svg',
        'io.qt.Qdbusviewer-symbolic.svg',
        'qdbusviewer-qt4-symbolic.svg',
        'qdbusviewer-qt5-symbolic.svg',
        'qdbusviewer5-symbolic.svg',
        'qtdbusviewer-symbolic.svg',
    ],
    'linguist-symbolic.svg': [
        'QtProject-linguist-symbolic.svg',
        'io.qt.Linguist-symbolic.svg',
        'linguist-qt4-symbolic.svg',
        'linguist-qt5-symbolic.svg',
        'linguist5-symbolic.svg',
        'qtlinguist-symbolic.svg',
    ],
    'assistant-symbolic.svg': [
        'QtProject-assistant-symbolic.svg',
        'assistant-qt4-symbolic.svg',
        'assistant-qt5-symbolic.svg',
        'assistant5-symbolic.svg',
        'io.qt.Assistant-symbolic.svg',
        'qtassistant-symbolic.svg',
    ],
    'protonmail-bridge-symbolic.svg': [
        'ProtonMail_Bridge-symbolic.svg',
        'ch.protonmail.protonmail-bridge-symbolic.svg',
    ],
    'nextcloud-symbolic.svg': [
        'Nextcloud-symbolic.svg',
        'com.nextcloud.desktopclient.nextcloud-symbolic.svg',
        'org.nextcloud.Nextcloud-symbolic.svg',
    ],
    'gitkraken-symbolic.svg': [
        'GitKraken-symbolic.svg',
        'com.axosoft.GitKraken-symbolic.svg',
    ],
    'io.element.Element-symbolic.svg': [
        'Element-symbolic.svg',
        'element-desktop-bin-symbolic.svg',
        'element-symbolic.svg',
        'im.riot.Riot-symbolic.svg',
    ],
    'resolve-symbolic.svg': [
        'DV_Resolve-symbolic.svg',
        'davinci-resolve-symbolic.svg',
    ],
    'CMakeSetup-symbolic.svg': [
        'CMakeSetup32-symbolic.svg',
        'cmake-gui-symbolic.svg',
        'cmake-symbolic.svg',
    ],
    'blender-symbolic.svg': [
        'Blender-symbolic.svg',
        'lutris_blender-symbolic.svg',
        'org.blender.Blender-symbolic.svg',
    ],
    'alacritty-symbolic.svg': [
        'Alacritty-symbolic.svg',
        'com.alacritty.Alacritty-symbolic.svg',
    ],
    # DO NOT REMOVE: End of link segment
}

install_data(regular_files, install_dir: symbolic_apps_iconsdir)

foreach dest_file, link_files_for_dest : link_files
    foreach link_file : link_files_for_dest
        install_symlink(link_file, install_dir: symbolic_apps_iconsdir, pointing_to: dest_file)
    endforeach
endforeach
